--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,4 +27,6 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install
       run: |
+        git submodule init
+        git submodule update
         pip install .
